Rip out Unrestricted/Normal/Insane modes for a single mode and clean up the UI navigation